parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> operation
Rule 2     program -> program operation
Rule 3     program -> empty
Rule 4     operation -> assign o_end
Rule 5     operation -> binop end
Rule 6     operation -> func_call end
Rule 7     operation -> if end
Rule 8     operation -> while end
Rule 9     operation -> func end
Rule 10    operation -> value end
Rule 11    operation -> return o_end
Rule 12    operation -> end
Rule 13    return -> RETURN binop
Rule 14    return -> RETURN
Rule 15    func -> FUNC id PAREN_OPEN typeargs PAREN_CLOSE o_id code_block
Rule 16    if -> IF binop code_block
Rule 17    if -> IF binop code_block ELSE code_block
Rule 18    while -> WHILE binop code_block
Rule 19    code_block -> CURLY_OPEN o_newline program CURLY_CLOSE
Rule 20    binop -> func_call
Rule 21    func_call -> id PAREN_OPEN params PAREN_CLOSE
Rule 22    func_call -> id PAREN_OPEN PAREN_CLOSE
Rule 23    assign -> id ASSIGN binop
Rule 24    assign -> id id ASSIGN binop
Rule 25    params -> params COMMA o_newline binop
Rule 26    params -> binop
Rule 27    typeargs -> typeargs COMMA o_newline typearg
Rule 28    typeargs -> typearg
Rule 29    typearg -> id id
Rule 30    typearg -> id
Rule 31    binop -> binop LESS binop
Rule 32    binop -> binop GREATER binop
Rule 33    binop -> binop LESS_EQ binop
Rule 34    binop -> binop GREATER_EQ binop
Rule 35    binop -> binop EQUAL binop
Rule 36    binop -> binop NOT_EQUAL binop
Rule 37    binop -> hp_binop
Rule 38    binop -> binop PLUS binop
Rule 39    binop -> binop MINUS binop
Rule 40    binop -> binop MUL binop
Rule 41    binop -> binop DIV binop
Rule 42    binop -> PAREN_OPEN binop PAREN_CLOSE
Rule 43    hp_binop -> value
Rule 44    hp_binop -> hp_binop MUL hp_binop
Rule 45    hp_binop -> hp_binop DIV hp_binop
Rule 46    hp_binop -> PAREN_OPEN hp_binop PAREN_CLOSE
Rule 47    value -> MINUS value
Rule 48    value -> INTEGER
Rule 49    value -> STRING
Rule 50    value -> id
Rule 51    o_id -> id
Rule 52    o_id -> empty
Rule 53    id -> NAME
Rule 54    id -> VALUE
Rule 55    o_newline -> NEWLINE
Rule 56    o_newline -> empty
Rule 57    o_end -> end
Rule 58    o_end -> empty
Rule 59    end -> SEMICOLON
Rule 60    end -> NEWLINE
Rule 61    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 23 24
COMMA                : 25 27
CURLY_CLOSE          : 19
CURLY_OPEN           : 19
DIV                  : 41 45
ELSE                 : 17
EQUAL                : 35
FUNC                 : 15
GREATER              : 32
GREATER_EQ           : 34
IF                   : 16 17
INTEGER              : 48
LESS                 : 31
LESS_EQ              : 33
MINUS                : 39 47
MUL                  : 40 44
NAME                 : 53
NEWLINE              : 55 60
NOT_EQUAL            : 36
PAREN_CLOSE          : 15 21 22 42 46
PAREN_OPEN           : 15 21 22 42 46
PLUS                 : 38
RETURN               : 13 14
SEMICOLON            : 59
STRING               : 49
VALUE                : 54
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

assign               : 4
binop                : 5 13 16 17 18 23 24 25 26 31 31 32 32 33 33 34 34 35 35 36 36 38 38 39 39 40 40 41 41 42
code_block           : 15 16 17 17 18
empty                : 3 52 56 58
end                  : 5 6 7 8 9 10 12 57
func                 : 9
func_call            : 6 20
hp_binop             : 37 44 44 45 45 46
id                   : 15 21 22 23 24 24 29 29 30 50 51
if                   : 7
o_end                : 4 11
o_id                 : 15
o_newline            : 19 25 27
operation            : 1 2
params               : 21 25
program              : 2 19 0
return               : 11
typearg              : 27 28
typeargs             : 15 27
value                : 10 43 47
while                : 8


state 0

    (0) S' -> . program
    (1) program -> . operation
    (2) program -> . program operation
    (3) program -> . empty
    (4) operation -> . assign o_end
    (5) operation -> . binop end
    (6) operation -> . func_call end
    (7) operation -> . if end
    (8) operation -> . while end
    (9) operation -> . func end
    (10) operation -> . value end
    (11) operation -> . return o_end
    (12) operation -> . end
    (61) empty -> .
    (23) assign -> . id ASSIGN binop
    (24) assign -> . id id ASSIGN binop
    (20) binop -> . func_call
    (31) binop -> . binop LESS binop
    (32) binop -> . binop GREATER binop
    (33) binop -> . binop LESS_EQ binop
    (34) binop -> . binop GREATER_EQ binop
    (35) binop -> . binop EQUAL binop
    (36) binop -> . binop NOT_EQUAL binop
    (37) binop -> . hp_binop
    (38) binop -> . binop PLUS binop
    (39) binop -> . binop MINUS binop
    (40) binop -> . binop MUL binop
    (41) binop -> . binop DIV binop
    (42) binop -> . PAREN_OPEN binop PAREN_CLOSE
    (21) func_call -> . id PAREN_OPEN params PAREN_CLOSE
    (22) func_call -> . id PAREN_OPEN PAREN_CLOSE
    (16) if -> . IF binop code_block
    (17) if -> . IF binop code_block ELSE code_block
    (18) while -> . WHILE binop code_block
    (15) func -> . FUNC id PAREN_OPEN typeargs PAREN_CLOSE o_id code_block
    (47) value -> . MINUS value
    (48) value -> . INTEGER
    (49) value -> . STRING
    (50) value -> . id
    (13) return -> . RETURN binop
    (14) return -> . RETURN
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE
    (53) id -> . NAME
    (54) id -> . VALUE
    (43) hp_binop -> . value
    (44) hp_binop -> . hp_binop MUL hp_binop
    (45) hp_binop -> . hp_binop DIV hp_binop
    (46) hp_binop -> . PAREN_OPEN hp_binop PAREN_CLOSE

  ! shift/reduce conflict for PAREN_OPEN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FUNC resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for VALUE resolved as shift
    $end            reduce using rule 61 (empty -> .)
    PAREN_OPEN      shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FUNC            shift and go to state 19
    MINUS           shift and go to state 15
    INTEGER         shift and go to state 20
    STRING          shift and go to state 21
    RETURN          shift and go to state 22
    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24
    NAME            shift and go to state 25
    VALUE           shift and go to state 26

  ! PAREN_OPEN      [ reduce using rule 61 (empty -> .) ]
  ! IF              [ reduce using rule 61 (empty -> .) ]
  ! WHILE           [ reduce using rule 61 (empty -> .) ]
  ! FUNC            [ reduce using rule 61 (empty -> .) ]
  ! MINUS           [ reduce using rule 61 (empty -> .) ]
  ! INTEGER         [ reduce using rule 61 (empty -> .) ]
  ! STRING          [ reduce using rule 61 (empty -> .) ]
  ! RETURN          [ reduce using rule 61 (empty -> .) ]
  ! SEMICOLON       [ reduce using rule 61 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 61 (empty -> .) ]
  ! NAME            [ reduce using rule 61 (empty -> .) ]
  ! VALUE           [ reduce using rule 61 (empty -> .) ]

    program                        shift and go to state 1
    operation                      shift and go to state 2
    empty                          shift and go to state 3
    assign                         shift and go to state 4
    binop                          shift and go to state 5
    end                            shift and go to state 6
    func_call                      shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    func                           shift and go to state 10
    value                          shift and go to state 11
    return                         shift and go to state 12
    id                             shift and go to state 13
    hp_binop                       shift and go to state 14

state 1

    (0) S' -> program .
    (2) program -> program . operation
    (4) operation -> . assign o_end
    (5) operation -> . binop end
    (6) operation -> . func_call end
    (7) operation -> . if end
    (8) operation -> . while end
    (9) operation -> . func end
    (10) operation -> . value end
    (11) operation -> . return o_end
    (12) operation -> . end
    (23) assign -> . id ASSIGN binop
    (24) assign -> . id id ASSIGN binop
    (20) binop -> . func_call
    (31) binop -> . binop LESS binop
    (32) binop -> . binop GREATER binop
    (33) binop -> . binop LESS_EQ binop
    (34) binop -> . binop GREATER_EQ binop
    (35) binop -> . binop EQUAL binop
    (36) binop -> . binop NOT_EQUAL binop
    (37) binop -> . hp_binop
    (38) binop -> . binop PLUS binop
    (39) binop -> . binop MINUS binop
    (40) binop -> . binop MUL binop
    (41) binop -> . binop DIV binop
    (42) binop -> . PAREN_OPEN binop PAREN_CLOSE
    (21) func_call -> . id PAREN_OPEN params PAREN_CLOSE
    (22) func_call -> . id PAREN_OPEN PAREN_CLOSE
    (16) if -> . IF binop code_block
    (17) if -> . IF binop code_block ELSE code_block
    (18) while -> . WHILE binop code_block
    (15) func -> . FUNC id PAREN_OPEN typeargs PAREN_CLOSE o_id code_block
    (47) value -> . MINUS value
    (48) value -> . INTEGER
    (49) value -> . STRING
    (50) value -> . id
    (13) return -> . RETURN binop
    (14) return -> . RETURN
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE
    (53) id -> . NAME
    (54) id -> . VALUE
    (43) hp_binop -> . value
    (44) hp_binop -> . hp_binop MUL hp_binop
    (45) hp_binop -> . hp_binop DIV hp_binop
    (46) hp_binop -> . PAREN_OPEN hp_binop PAREN_CLOSE

    PAREN_OPEN      shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FUNC            shift and go to state 19
    MINUS           shift and go to state 15
    INTEGER         shift and go to state 20
    STRING          shift and go to state 21
    RETURN          shift and go to state 22
    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24
    NAME            shift and go to state 25
    VALUE           shift and go to state 26

    operation                      shift and go to state 27
    assign                         shift and go to state 4
    binop                          shift and go to state 5
    end                            shift and go to state 6
    func_call                      shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    func                           shift and go to state 10
    value                          shift and go to state 11
    return                         shift and go to state 12
    id                             shift and go to state 13
    hp_binop                       shift and go to state 14

state 2

    (1) program -> operation .

    PAREN_OPEN      reduce using rule 1 (program -> operation .)
    IF              reduce using rule 1 (program -> operation .)
    WHILE           reduce using rule 1 (program -> operation .)
    FUNC            reduce using rule 1 (program -> operation .)
    MINUS           reduce using rule 1 (program -> operation .)
    INTEGER         reduce using rule 1 (program -> operation .)
    STRING          reduce using rule 1 (program -> operation .)
    RETURN          reduce using rule 1 (program -> operation .)
    SEMICOLON       reduce using rule 1 (program -> operation .)
    NEWLINE         reduce using rule 1 (program -> operation .)
    NAME            reduce using rule 1 (program -> operation .)
    VALUE           reduce using rule 1 (program -> operation .)
    $end            reduce using rule 1 (program -> operation .)
    CURLY_CLOSE     reduce using rule 1 (program -> operation .)


state 3

    (3) program -> empty .

    PAREN_OPEN      reduce using rule 3 (program -> empty .)
    IF              reduce using rule 3 (program -> empty .)
    WHILE           reduce using rule 3 (program -> empty .)
    FUNC            reduce using rule 3 (program -> empty .)
    MINUS           reduce using rule 3 (program -> empty .)
    INTEGER         reduce using rule 3 (program -> empty .)
    STRING          reduce using rule 3 (program -> empty .)
    RETURN          reduce using rule 3 (program -> empty .)
    SEMICOLON       reduce using rule 3 (program -> empty .)
    NEWLINE         reduce using rule 3 (program -> empty .)
    NAME            reduce using rule 3 (program -> empty .)
    VALUE           reduce using rule 3 (program -> empty .)
    $end            reduce using rule 3 (program -> empty .)
    CURLY_CLOSE     reduce using rule 3 (program -> empty .)


state 4

    (4) operation -> assign . o_end
    (57) o_end -> . end
    (58) o_end -> . empty
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE
    (61) empty -> .

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24
    PAREN_OPEN      reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    FUNC            reduce using rule 61 (empty -> .)
    MINUS           reduce using rule 61 (empty -> .)
    INTEGER         reduce using rule 61 (empty -> .)
    STRING          reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    NAME            reduce using rule 61 (empty -> .)
    VALUE           reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)
    CURLY_CLOSE     reduce using rule 61 (empty -> .)

  ! SEMICOLON       [ reduce using rule 61 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 61 (empty -> .) ]

    o_end                          shift and go to state 28
    end                            shift and go to state 29
    empty                          shift and go to state 30

state 5

    (5) operation -> binop . end
    (31) binop -> binop . LESS binop
    (32) binop -> binop . GREATER binop
    (33) binop -> binop . LESS_EQ binop
    (34) binop -> binop . GREATER_EQ binop
    (35) binop -> binop . EQUAL binop
    (36) binop -> binop . NOT_EQUAL binop
    (38) binop -> binop . PLUS binop
    (39) binop -> binop . MINUS binop
    (40) binop -> binop . MUL binop
    (41) binop -> binop . DIV binop
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE

    LESS            shift and go to state 32
    GREATER         shift and go to state 33
    LESS_EQ         shift and go to state 34
    GREATER_EQ      shift and go to state 35
    EQUAL           shift and go to state 36
    NOT_EQUAL       shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MUL             shift and go to state 40
    DIV             shift and go to state 41
    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24

    end                            shift and go to state 31

state 6

    (12) operation -> end .

    PAREN_OPEN      reduce using rule 12 (operation -> end .)
    IF              reduce using rule 12 (operation -> end .)
    WHILE           reduce using rule 12 (operation -> end .)
    FUNC            reduce using rule 12 (operation -> end .)
    MINUS           reduce using rule 12 (operation -> end .)
    INTEGER         reduce using rule 12 (operation -> end .)
    STRING          reduce using rule 12 (operation -> end .)
    RETURN          reduce using rule 12 (operation -> end .)
    SEMICOLON       reduce using rule 12 (operation -> end .)
    NEWLINE         reduce using rule 12 (operation -> end .)
    NAME            reduce using rule 12 (operation -> end .)
    VALUE           reduce using rule 12 (operation -> end .)
    $end            reduce using rule 12 (operation -> end .)
    CURLY_CLOSE     reduce using rule 12 (operation -> end .)


state 7

    (6) operation -> func_call . end
    (20) binop -> func_call .
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    LESS            reduce using rule 20 (binop -> func_call .)
    GREATER         reduce using rule 20 (binop -> func_call .)
    LESS_EQ         reduce using rule 20 (binop -> func_call .)
    GREATER_EQ      reduce using rule 20 (binop -> func_call .)
    EQUAL           reduce using rule 20 (binop -> func_call .)
    NOT_EQUAL       reduce using rule 20 (binop -> func_call .)
    PLUS            reduce using rule 20 (binop -> func_call .)
    MINUS           reduce using rule 20 (binop -> func_call .)
    MUL             reduce using rule 20 (binop -> func_call .)
    DIV             reduce using rule 20 (binop -> func_call .)
    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24

  ! SEMICOLON       [ reduce using rule 20 (binop -> func_call .) ]
  ! NEWLINE         [ reduce using rule 20 (binop -> func_call .) ]

    end                            shift and go to state 42

state 8

    (7) operation -> if . end
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE

    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24

    end                            shift and go to state 43

state 9

    (8) operation -> while . end
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE

    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24

    end                            shift and go to state 44

state 10

    (9) operation -> func . end
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE

    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24

    end                            shift and go to state 45

state 11

    (10) operation -> value . end
    (43) hp_binop -> value .
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    MUL             reduce using rule 43 (hp_binop -> value .)
    DIV             reduce using rule 43 (hp_binop -> value .)
    LESS            reduce using rule 43 (hp_binop -> value .)
    GREATER         reduce using rule 43 (hp_binop -> value .)
    LESS_EQ         reduce using rule 43 (hp_binop -> value .)
    GREATER_EQ      reduce using rule 43 (hp_binop -> value .)
    EQUAL           reduce using rule 43 (hp_binop -> value .)
    NOT_EQUAL       reduce using rule 43 (hp_binop -> value .)
    PLUS            reduce using rule 43 (hp_binop -> value .)
    MINUS           reduce using rule 43 (hp_binop -> value .)
    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24

  ! SEMICOLON       [ reduce using rule 43 (hp_binop -> value .) ]
  ! NEWLINE         [ reduce using rule 43 (hp_binop -> value .) ]

    end                            shift and go to state 46

state 12

    (11) operation -> return . o_end
    (57) o_end -> . end
    (58) o_end -> . empty
    (59) end -> . SEMICOLON
    (60) end -> . NEWLINE
    (61) empty -> .

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    SEMICOLON       shift and go to state 23
    NEWLINE         shift and go to state 24
    PAREN_OPEN      reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    FUNC            reduce using rule 61 (empty -> .)
    MINUS           reduce using rule 61 (empty -> .)
    INTEGER         reduce using rule 61 (empty -> .)
    STRING          reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    NAME            reduce using rule 61 (empty -> .)
    VALUE           reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)
    CURLY_CLOSE     reduce using rule 61 (empty -> .)

  ! SEMICOLON       [ reduce using rule 61 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 61 (empty -> .) ]

    o_end                          shift and go to state 47
    end                            shift and go to state 29
    empty                          shift and go to state 30

state 13

    (23) assign -> id . ASSIGN binop
    (24) assign -> id . id ASSIGN binop
    (21) func_call -> id . PAREN_OPEN params PAREN_CLOSE
    (22) func_call -> id . PAREN_OPEN PAREN_CLOSE
    (50) value -> id .
    (53) id -> . NAME
    (54) id -> . VALUE

    ASSIGN          shift and go to state 49
    PAREN_OPEN      shift and go to state 50
    SEMICOLON       reduce using rule 50 (value -> id .)
    NEWLINE         reduce using rule 50 (value -> id .)
    MUL             reduce using rule 50 (value -> id .)
    DIV             reduce using rule 50 (value -> id .)
    LESS            reduce using rule 50 (value -> id .)
    GREATER         reduce using rule 50 (value -> id .)
    LESS_EQ         reduce using rule 50 (value -> id .)
    GREATER_EQ      reduce using rule 50 (value -> id .)
    EQUAL           reduce using rule 50 (value -> id .)
    NOT_EQUAL       reduce using rule 50 (value -> id .)
    PLUS            reduce using rule 50 (value -> id .)
    MINUS           reduce using rule 50 (value -> id .)
    NAME            shift and go to state 25
    VALUE           shift and go to state 26

    id                             shift and go to state 48

state 14

    (37) binop -> hp_binop .
    (44) hp_binop -> hp_binop . MUL hp_binop
    (45) hp_binop -> hp_binop . DIV hp_binop

  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    LESS            reduce using rule 37 (binop -> hp_binop .)
    GREATER         reduce using rule 37 (binop -> hp_binop .)
    LESS_EQ         reduce using rule 37 (binop -> hp_binop .)
    GREATER_EQ      reduce using rule 37 (binop -> hp_binop .)
    EQUAL           reduce using rule 37 (binop -> hp_binop .)
    NOT_EQUAL       reduce using rule 37 (binop -> hp_binop .)
    PLUS            reduce using rule 37 (binop -> hp_binop .)
    MINUS           reduce using rule 37 (binop -> hp_binop .)
    SEMICOLON       reduce using rule 37 (binop -> hp_binop .)
    NEWLINE         reduce using rule 37 (binop -> hp_binop .)
    CURLY_OPEN      reduce using rule 37 (binop -> hp_binop .)
    PAREN_OPEN      reduce using rule 37 (binop -> hp_binop .)
    IF              reduce using rule 37 (binop -> hp_binop .)
    WHILE           reduce using rule 37 (binop -> hp_binop .)
    FUNC            reduce using rule 37 (binop -> hp_binop .)
    INTEGER         reduce using rule 37 (binop -> hp_binop .)
    STRING          reduce using rule 37 (binop -> hp_binop .)
    RETURN          reduce using rule 37 (binop -> hp_binop .)
    NAME            reduce using rule 37 (binop -> hp_binop .)
    VALUE           reduce using rule 37 (binop -> hp_binop .)
    $end            reduce using rule 37 (binop -> hp_binop .)
    CURLY_CLOSE     reduce using rule 37 (binop -> hp_binop .)
    PAREN_CLOSE     reduce using rule 37 (binop -> hp_binop .)
    COMMA           reduce using rule 37 (binop -> hp_binop .)
    MUL             shift and go to state 51
    DIV             shift and go to state 52

  ! MUL             [ reduce using rule 37 (binop -> hp_binop .) ]
  ! DIV             [ reduce using rule 37 (binop -> hp_binop .) ]


state 15

    (47) value -> MINUS . value
    (47) value -> . MINUS value
    (48) value -> . INTEGER
    (49) value -> . STRING
    (50) value -> . id
    (53) id -> . NAME
    (54) id -> . VALUE

    MINUS           shift and go to state 15
    INTEGER         shift and go to state 20
    STRING          shift and go to state 21
    NAME            shift and go to state 25
    VALUE           shift and go to state 26

    value                          shift and go to state 53
    id                             shift and go to state 54

state 16

    (42) binop -> PAREN_OPEN . binop PAREN_CLOSE
    (46) hp_binop -> PAREN_OPEN . hp_binop PAREN_CLOSE
    (20) binop -> . func_call
    (31) binop -> . binop LESS binop
    (32) binop -> . binop GREATER binop
    (33) binop -> . binop LESS_EQ binop
    (34) binop -> . binop GREATER_EQ binop
    (35) binop -> . binop EQUAL binop
    (36) binop -> . binop NOT_EQUAL binop
    (37) binop -> . hp_binop
    (38) binop -> . binop PLUS binop
    (39) binop -> . binop MINUS binop
    (40) binop -> . binop MUL binop
    (41) binop -> . binop DIV binop
    (42) binop -> . PAREN_OPEN binop PAREN_CLOSE
    (43) hp_binop -> . value
    (44) hp_binop -> . hp_binop MUL hp_binop
    (45) hp_binop -> . hp_binop DIV hp_binop
    (46) hp_binop -> . PAREN_OPEN hp_binop PAREN_CLOSE
    (21) func_call -> . id PAREN_OPEN params PAREN_CLOSE
    (22) func_call -> . id PAREN_OPEN PAREN_CLOSE
    (47) value -> . MINUS value
    (48) value -> . INTEGER
    (49) value -> . STRING
    (50) value -> . id
    (53) id -> . NAME
    (54) id -> . VALUE

    PAREN_OPEN      shift and go to state 16
    MINUS           shift and go to state 15
    INTEGER         shift and go to state 20
    STRING          shift and go to state 21
    NAME            shift and go to state 25
    VALUE           shift and go to state 26

    binop                          shift and go to state 55
    hp_binop                       shift and go to state 56
    func_call                      shift and go to state 57
    value                          shift and go to state 58
    id                             shift and go to state 59

state 17
